--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -22,8 +23,10 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "*",
