--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -23,22 +23,21 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-datepicker": "^8.2.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-gifted-chat": "*",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keyboard-controller": "^1.16.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "*",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "setprototypeof": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
