--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.4",
     "expo": "~52.0.27",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.18",
     "expo-linear-gradient": "^14.0.2",
+    "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
+    "my-project": "file:",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -40,7 +44,8 @@
     "setprototypeof": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
