--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.27",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
