--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-intent-launcher": "~12.0.2",
     "expo-linear-gradient": "^14.0.2",
     "expo-permissions": "^14.4.0",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -45,9 +46,12 @@
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "react-redux": "^9.2.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "rn-emoji-keyboard": "^1.7.0",
     "setprototypeof": "^1.2.0",
-    "expo-sharing": "~13.0.1"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
