--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "expo": "~52.0.27",
+    "expo-av": "^15.0.2",
     "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
@@ -46,7 +47,7 @@
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-redux": "^9.2.0",
+    "react-redux": "^8.1.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "rn-emoji-keyboard": "^1.7.0",
