--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-intent-launcher": "~12.0.2",
     "expo-linear-gradient": "^14.0.2",
     "expo-permissions": "^14.4.0",
+    "expo-radio-button": "^1.0.8",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
