--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "52.0.46",
     "expo-av": "^15.0.2",
     "expo-camera": "~16.0.18",
+    "expo-contacts": "^14.2.4",
     "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
@@ -51,7 +52,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "rn-emoji-keyboard": "^1.2.0",
     "setprototypeof": "^1.2.0",
