--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "53.0.0",
     "expo-av": "~15.0.2",
     "expo-camera": "~16.0.18",
+    "expo-clipboard": "^7.1.4",
     "expo-contacts": "^14.2.4",
     "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.12",
