--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "expo": "53.0.0",
